@@ -1647,10 +1647,6 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
         hard coded password value in the configuration file, end users can't
         be allowed to change their passwords.</dd>
 
-    <dt id="cfg_SuggestDBName">$cfg['SuggestDBName'] boolean</dt>
-    <dd>Defines whether to suggest a database name on the
-        &quot;Create Database&quot; form or to keep the textfield empty.</dd>
-
     <dt id="cfg_ShowDbStructureCreation">$cfg['ShowDbStructureCreation'] boolean</dt>
     <dd>Defines whether the database structure page (tables list) has a 
         &quot;Creation&quot; column that displays when each table was created.</dd>
