@@ -499,8 +499,6 @@ $strConfigSQLValidator_use_desc = __('[strong]Warning:[/strong] requires PHP SOA
 $strConfigSQLValidator_use_name = __('Enable SQL Validator');
 $strConfigSQLValidator_username_desc = __('If you have a custom username, specify it here (defaults to [kbd]anonymous[/kbd])');
 $strConfigSQLValidator_username_name = __('Username');
-$strConfigSuggestDBName_desc = __('Suggest a database name on the &quot;Create Database&quot; form (if possible) or keep the text field empty');
-$strConfigSuggestDBName_name = __('Suggest new database name');
 $strConfigSuhosinDisableWarning_desc = __('A warning is displayed on the main page if Suhosin is detected');
 $strConfigSuhosinDisableWarning_name = __('Suhosin warning');
 $strConfigTextareaCols_desc = __('Textarea size (columns) in edit mode, this value will be emphasized for SQL query textareas (*2) and for query window (*1.25)');
