@@ -97,9 +97,7 @@ $forms['Left_frame']['Left_tables'] = array(
     'ShowTooltip',
     'ShowTooltipAliasTB');
 $forms['Main_frame']['Startup'] = array(
-    'ShowCreateDb' => ':group',
-        'SuggestDBName',
-        ':group:end',
+    'ShowCreateDb',
     'ShowStats',
     'ShowServerInfo');
 $forms['Main_frame']['DbStructure'] = array(
